# composeur_xx

./: CMakeLists.txt
include/: Constant.h  IGenerator.h  Instrument.h  Sequence.h  Util.h
include/Effects/: Envelope.h  Mixer.h
include/Generators/: Constant.h  Sine.h
include/Interfaces/: IControllable.h  IFrequencyGen.h  IGenerator.h
include/Oscillators/: Sine.h
src/: Sequence.cpp  Util.cpp  main.cpp
src/Effects/: Envelope.cpp
src/Generators/: Sine.cpp
src/Oscillators/: Sine.cpp
